# Vijay-AI-CodeGen-Python-Code-Generator-Optimizer

./: .gitignore  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt
src/euri_codegen/: catalog_loader.py  cli.py  config.py  euri_client.py  models.py
src/euri_codegen/catalog/: dsa_catalog.json
src/euri_codegen/codegen/: generator.py  optimizer.py
src/euri_codegen/prompts/: templates.py
tests/: conftest.py  test_catalog.py  test_cli_smoke.py  test_validate_catalog.py
